# TaskMaster

./: AddTask_Drawer.qml  CMakeLists.txt  LoadPage.qml  Main.qml  Main_Page.qml  main.cpp
